# todo

client/: package-lock.json  package.json
client/src/components/: to-do-form.tsx  to-do-item.tsx  to-do-list.tsx  to-do-tab.tsx
client/src/renderer/: App.tsx  index.ejs
client/src/services/: service.ts
server/: .env  Cargo.toml  README.md
server/migration/src/: lib.rs  m20250219_154819_create_to_do_table.rs
server/src/: main.rs
server/src/entities/: mod.rs  prelude.rs  todo.rs
server/src/handlers/: mod.rs  todos.rs
server/src/repositories/: mod.rs  prelude.rs  todos.rs
