[package]
name = "actix-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = {version = "1.0.217", features = [ "derive" ]}
serde_json = "1.0.138"
actix-cors = "0.7.0"
dotenv = "0.15.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
async-std = { version = "1.13.0", features = [ "tokio1", "attributes" ]}
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ]}
futures = "0.3.31"
env_logger = "0.11.6"
log = "0.4.25"
migration = { path = "migration" }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [ "sqlx-postgres", "runtime-tokio-native-tls" ]

